chore jwt middleware added

--- a/Logonya/appsettings.json
+++ b/Logonya/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=logonya;Username=root;Password=test"
+    "DefaultConnection": "Host=localhost;Database=logonya;Username=postgres;Password=test123"
   },
 
   "JwtSettings": {
