--- a/Logonya/Presentation.csproj
+++ b/Logonya/Presentation.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\Chat\Endpoints\" />
+  </ItemGroup>
+
 </Project>
