--- a/Logonya/appsettings.json
+++ b/Logonya/appsettings.json
@@ -15,5 +15,19 @@
     "Issuer": "your-issuer",
     "Audience": "your-audience",
     "ExpirationInMinutes": 60
+  },
+  "KafkaProducerConfig": {
+    "BootstrapServers": "localhost:29092",
+    "Topics": {
+      "LogVectorization": {
+        "Name": "logging.vectorization",
+        "KeyPrefix": "LOG",
+        "PartitionCount": 6,
+        "ReplicationFactor": 1
+      }
+    }
+  },
+  "Anthropic": {
+    "ApiKey": "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"
   }
 }
