--- a/Logonya/appsettings.json
+++ b/Logonya/appsettings.json
@@ -28,6 +28,6 @@
     }
   },
   "Anthropic": {
-    "ApiKey": "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"
+    "ApiKey": "XXX"
   }
 }
