Add webhook functionality with Kafka integration
- Introduced IWebhookService interface for sending and processing webhooks.
- Implemented CreateWebhookCommand and its handler for creating webhooks.
- Added Webhook model and repository for managing webhook data.
- Integrated webhook processing service to handle incoming webhook notifications.
- Updated dependency injection to include webhook services and repositories.
- Enhanced logging capabilities by sending error logs as webhooks.
- Created API endpoints for managing webhooks in the application.

--- a/Logonya/appsettings.json
+++ b/Logonya/appsettings.json
@@ -24,10 +24,16 @@
         "KeyPrefix": "LOG",
         "PartitionCount": 6,
         "ReplicationFactor": 1
+      },
+      "WebhookNotifications": {
+        "Name": "webhook.notifications",
+        "KeyPrefix": "WHK",
+        "PartitionCount": 6,
+        "ReplicationFactor": 1
       }
     }
   },
   "Anthropic": {
-    "ApiKey": "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"
+    "ApiKey": "xxx"
   }
 }
