Add alerting functionality with monitoring and webhook integration
- Introduced AlertCondition, CreateAlertCommand, and related classes for defining alert conditions and creating alerts.
- Implemented CreateAlertCommandHandler for processing alert creation requests.
- Added validation for CreateAlertCommand using FluentValidation.
- Developed AlertMonitoringService to evaluate alert conditions and trigger webhooks for alert events.
- Created API endpoints for creating alerts and replaying logs.
- Enhanced logging capabilities by integrating alert events into the existing logging framework.
- Updated dependency injection to include alert services and repositories.

--- a/Logonya/appsettings.json
+++ b/Logonya/appsettings.json
@@ -34,6 +34,6 @@
     }
   },
   "Anthropic": {
-    "ApiKey": "xxx"
+    "ApiKey": "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"
   }
 }
